--- a/app/templates/blog_detailed.html
+++ b/app/templates/blog_detailed.html
@@ -4,68 +4,71 @@
 <body class="home page page-template page-template-template-portfolio page-template-template-portfolio-php">
 <div id="page">
 	<div class="container">
-		<header id="masthead" class="site-header">
-			<div class="site-branding">
-				<h1 class="site-title"><a href="index.html" rel="home">Moschino</a></h1>
-				<h2 class="site-description">Minimalist Portfolio HTML Template</h2>
-			</div>
-			<nav id="site-navigation" class="main-navigation">
-				<button class="menu-toggle">Menu</button>
-				<a class="skip-link screen-reader-text" href="#content">Skip to content</a>
-				<div class="menu-menu-1-container">
-					<ul id="menu-menu-1" class="menu">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="about.html">About</a></li>
-						<li><a href="shop.html">Shop</a></li>
-						<li><a href="blog.html">Blog</a></li>
-						<li><a href="elements.html">Elements</a></li>
-						<li><a href="#">Pages</a>
-						<ul class="sub-menu">
-							<li><a href="portfolio-item.html">Portfolio Item</a></li>
-							<li><a href="blog-single.html">Blog Article</a></li>
-							<li><a href="shop-single.html">Shop Item</a></li>
-							<li><a href="portfolio-category.html">Portfolio Category</a></li>
-						</ul>
-						</li>
-						<li><a href="contact.html">Contact</a></li>
-					</ul>
-				</div>
-			</nav>
-		</header>
+	
 		<!-- #masthead -->
+		
 		<div id="content" class="site-content">
 			<div id="primary" class="content-area column two-thirds single-portfolio">
 				<main id="main" class="site-main">
-				
+					
 				<article class="portfolio hentry">
 				<header class="entry-header">
 				<div class="entry-thumbnail">
-					<img width="800" height="533" src="{% static 'images/Jan/boy' %}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/>
+					<img width="800" height="533" src="{{ blog.image.url }}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/>
 				</div>
-				<h1 class="entry-title">Sunset Beach</h1>
-				<a class='portfoliotype' href='portfolio-category.html'>summer</a>
-				<a class='portfoliotype' href='portfolio-category.html'>woman</a>
-				<a class='portfoliotype' href='portfolio-category.html'>yellow</a>
+				<h1 class="entry-title">{{blog.title}}</h1>
+				{% comment %} <ul>
+					{% for cat in category %}
+					<li>
+						<a href="{% url 'blog_by_category' cat.slug %}">{{ cat.month }} - {{ cat.venue }} ({{ cat.race }} KM)</a>
+					</li>
+					{% endfor %} {% endcomment %}
+					{% comment %} {% for cat in category %}
+						<li>
+							<a href="#">{{ cat.month }} - {{ cat.venue }} ({{ cat.race }} KM)</a>
+						</li>
+					{% endfor %} {% endcomment %}
+				{% comment %} </ul> {% endcomment %}
+				{% comment %} {% if blog.category %}
+				<a class='portfoliotype' href='portfolio-category.html'>{{ blog.category.month }}</a>
+				<a class='portfoliotype' href='portfolio-category.html'>{{ blog.category.venue }}</a>
+				<a class='portfoliotype' href='portfolio-category.html'>{{ blog.category.race }}</a>
+				{% endif %} {% endcomment %}
 				</header>
 				<div class="entry-content">
-					<p>
+					{% comment %} <p>
 						Beautiful young woman in a green dress with curly long hair.
 					</p>
 					<p>
 						There was no possibility of taking a walk that day. We had been wandering, indeed, in the leafless shrubbery an hour in the morning.
-					</p>
+					</p> {% endcomment %}
 					<blockquote>
 						<p>
-							I was glad of it: I never liked long walks, especially on chilly afternoons: dreadful to me was the coming home in the raw twilight, with nipped fingers and toes, and a heart saddened by the chidings of Bessie, the nurse, and humbled by the consciousness of my physical inferiority to Eliza, John, and Georgiana Reed.
+							{{blog.content}}
 						</p>
 					</blockquote>
-					<p>
+					<ul>
+						{% for cat in category %}
+							<li>
+								<a href="{% url 'blog_by_category' cat.slug %}">
+									{{ cat.month }}/{{ cat.venue }}/{{ cat.race }} KM
+								</a>
+							</li>
+						{% endfor %}
+					</ul>
+					{% comment %} {% if blog.category %}
+									<a class="portfoliotype" href="#">{{ blog.category.month }}</a>
+									<a class="portfoliotype" href="#">{{ blog.category.venue }}</a>
+									<a class="portfoliotype" href="#">{{ blog.category.race }} KM</a>
+					{% endif %} {% endcomment %}
+					{% comment %} <p>
 						The said Eliza, John, and Georgiana were now clustered round their mama in the drawing-room: she lay reclined on a sofa by the fireside, and with her darlings about her (for the time neither quarrelling nor crying) looked perfectly happy.
-					</p>
+					</p> {% endcomment %}
 				</div>
 				</article>
+				{% comment %} {% endfor %} {% endcomment %}
 				
-				<nav class="navigation post-navigation" role="navigation">
+				{% comment %} <nav class="navigation post-navigation" role="navigation">
 					<h1 class="screen-reader-text">Post navigation</h1>
 					<div class="nav-links">
 					<div class="nav-previous">
@@ -75,15 +78,16 @@
 					<a href="#" rel="next">Sunset Beach <span class="meta-nav">→</span></a>
 					</div>		
 					</div>
-				</nav>
+				</nav> {% endcomment %}
 				<!-- .navigation -->
 				
 				</main>
 				<!-- #main -->
 			</div>
+			
 			<!-- #primary -->
 			
-			<div id="secondary" class="column third">
+			{% comment %} <div id="secondary" class="column third">
 				<div class="widget-area">
 					<aside class="widget">
 						<h4 class="widget-title">Request similar project</h4>
@@ -100,7 +104,7 @@
 						</div>
 					</aside>
 				</div>
-			</div>
+			</div> {% endcomment %}
 		</div>
 		<!-- #content -->
 	</div>
