added a view for add photo and urls for add_photo and add_blog, as well as created a delete template

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -38,7 +38,7 @@
                 <li><a href="{% url 'home' %}">Home</a></li>
                 <li><a href="{% url 'about' %}">About</a></li>
                 <li><a href="{% url 'blog' %}">Blog</a></li>
-                 <li><a href="shop.html">Add</a>
+                 <li><a href="#">Add</a>
                     <ul class="sub-menu">
                         <li><a href="#">Add A Photo</a></li> 
                         <li><a href="#">Add A Blog</a></li>
