done with add_photo views and template, started with pagination

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -38,15 +38,7 @@
 											</a>
 										</li>
 									</ul>
-									{% comment %} {% if photos.category %}
-									 <ul class="portfoliotype"style="margin-top: 5px; margin-left: 12px;"" > 
-									<li  style="list-style: none;">{{ photos.category.month }} / {{ photos.category.venue }} / {{ photos.category.race }} KM</li> {% endcomment %}
-									{% comment %} <p class="portfoliotype">{{ photos.category.venue }} </p>
-									<p class="portfoliotype">{{ photos.category.race }} KM</p> {% endcomment %}
-									{% comment %} <a class="portfoliotype" href="#">{{ photos.category.month }}</a>
-									<a class="portfoliotype" href="#">{{ photos.category.venue }}</a>
-									<a class="portfoliotype" href="#">{{ photos.category.race }} KM</a> {% endcomment %}
-                                   {% comment %} </ul> {% endcomment %}
+									
 									 {% endif %} 
 								</header>
 							</article>
@@ -56,13 +48,13 @@
 							
 						</div>
 						<!-- .grid -->
-						
+{% comment %} 						
 						<nav class="pagination">
 						<span class="page-numbers current">1</span>
 						<a class="page-numbers" href="#">2</a>
 						<a class="next page-numbers" href="#">Next »</a>
 						</nav>
-						<br/>
+						<br/> {% endcomment %}
 					
 					</main>
 					<!-- #main -->
