--- a/app/templates/add_photo.html
+++ b/app/templates/add_photo.html
@@ -2,58 +2,106 @@
 {% load static %}
 {% block content %}
 <body class="home page page-template page-template-template-portfolio page-template-template-portfolio-php">
+
+
+<style>
+
+	/* Custom styling for the submit button */
+.btn-submit {
+    display: inline-block;
+    padding: 10px 15px;
+	margin:8px;
+    font-size: 14px;
+    color: #fff;
+    background-color: grey;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-align: center;
+    transition: background-color 0.3s ease;
+}
+
+.btn-submit:hover {
+    background-color: black;
+}
+</style>
+
+
 	<div id="page">
 		<div class="container">
-			
-			<!-- #masthead -->
-			<div id="content" class="site-content">
-				<div id="primary" class="content-area column full">
-					<main id="main" class="site-main">
-						<div class="grid portfoliogrid">
+			<main id="main" class="site-main">
 
-						{% comment %} image-1 {% endcomment %}
-						{% for photos in photo %}
-							<article class="hentry">
-								<header class="entry-header">
-									<div class="entry-thumbnail">
-										<a href="{% url 'photo_detail' photos.id %}">
-											<img src="{{ photos.image.url }}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/>
-										</a>
+					
+					<h1 class="m-4 p-4  text-center"  >Add a New Photo</h1>
+					<div class="row justify-content-center ">
+						<div class="col-md-4">
+							<div class="card">
+								<form method='POST' action="" enctype="multipart/form-data">
+									{% csrf_token %}
+									
+									<div class="form-group m-3">
+										<label for="title" class="form-label">Title</label>
+										<input type="text" name="title" id="title" placeholder="Title *" required
+											class="form-control">
 									</div>
-									<h2 class="entry-title">
-										<a href="{% url 'photo_detail' photos.id %}">{{ photos.title }}</a>
-									</h2>
-									{% if photos.category %}
-									<a class="portfoliotype" href="#">{{ photos.category.month }}</a>
-									<a class="portfoliotype" href="#">{{ photos.category.venue }}</a>
-									<a class="portfoliotype" href="#">{{ photos.category.race }} KM</a>
-									 {% endif %} 
-								</header>
-							</article>
-						{% endfor %}	
-							
+									<div class="form-group m-3">
+										<label for="image" class="form-label" >Upload image</label>
+										<input  name="image" id="image"  type="file" multiple class="form-control-file" required>
+									</div>
+				
+									<div class="form-group m-3">
+										<label for="category" class="form-label">Select a category</label>
+										<select name="category" id="category" class="form-control">
+											<option value='none'>Select a category</option>
+				
+											{% for cat in category %}
+											<option value="{{cat.id}}">{{cat.month}} /{{cat.venue}}/ {{cat.race}} KM </option>
+											{% endfor %}
+										</select>
+									</div>
+									
+									<div class="form-group m-3">
+										<label for="category_month" class="form-label">New Category Month</label>
+										<input type="text" name="category_month" id="category_month" class="form-control" >
+									</div>
+									<div class="form-group m-3">
+										<label for="category_venue" class="form-label">New Category Venue</label>
+										<input type="text" name="category_venue" id="category_venue" class="form-control" >
+									</div>
+									<div class="form-group m-3">
+										<label for="category_race" class="form-label">How Many KM</label>
+										<input type="text" name="category_race" id="category_race" class="form-control" >
+									</div>
+				
+				
+									
+									<button type='submit' class="btn-submit" >Submit</button>
+				
+								</form>
+							</div>
+					
+					</div>
+				
+			{% comment %} </div> {% endcomment %}
+
 						
-							
-						</div>
-						<!-- .grid -->
-						
-						<nav class="pagination">
+					{% comment %} <nav class="pagination">
 						<span class="page-numbers current">1</span>
 						<a class="page-numbers" href="#">2</a>
 						<a class="next page-numbers" href="#">Next »</a>
-						</nav>
-						<br/>
+					</nav>
+						<br/> {% endcomment %}
 					
-					</main>
+			</main>
 					<!-- #main -->
-				</div>
+				{% comment %} </div> {% endcomment %}
 				<!-- #primary -->
-			</div>
+			{% comment %} </div> {% endcomment %}
 			<!-- #content -->
 		</div>
 		<!-- .container -->
 
-	<a href="#top" class="smoothup" title="Back to top"><span class="genericon genericon-collapse"></span></a>
+	{% comment %} <a href="#top" class="smoothup" title="Back to top"><span class="genericon genericon-collapse"></span></a> {% endcomment %}
 </div>
 <!-- #page -->
 
@@ -61,3 +109,5 @@
 </html>
 
 {% endblock %}
+
+
