--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,9 +1,5 @@
 
 {% load static %}
-
-
-
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,6 +13,8 @@
     <link rel='stylesheet' href='{% static "css/style.css" %}' type='text/css' media='all'/>
     <link rel='stylesheet' href='{% static "css/easy-responsive-shortcodes.css" %}' type='text/css' media='all'/>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Oswald:400,500,700%7CRoboto:400,500,700%7CHerr+Von+Muellerhoff:400,500,700%7CQuattrocento+Sans:400,500,700' type='text/css' media='all'/>
+    {% comment %} bootstrap {% endcomment %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 
     <title>I Ran in 2025</title>
 </head>
@@ -40,7 +38,7 @@
                 <li><a href="{% url 'blog' %}">Blog</a></li>
                  <li><a href="#">Add</a>
                     <ul class="sub-menu">
-                        <li><a href="#">Add A Photo</a></li> 
+                        <li><a href="{% url "add_photo" %}">Add A Photo</a></li> 
                         <li><a href="#">Add A Blog</a></li>
                     </ul>
                 </li>
@@ -52,17 +50,53 @@
     </nav>
 </header>
 
+    
+
+
 {% block content %}
+<body>
+    
+
+<div id="page">
+    <div class="container">
+        <div id="content" class="site-content">
+            <div id="primary" class="content-area column full">
+                <main id="main" class="site-main">
+                    <div class="grid portfoliogrid">
 
 
+                        <nav class="pagination">
+                            {% if photo.has_previous %}
+                            <a class="page-numbers" href="?page={{ photo.previous_page_number }}">« Previous</a>
+                            {% endif %}
 
+                            {% for num in photo.paginator.page_range %}
+                                {% if photo.number == num %}
+                                    <span class="page-numbers current">{{ num }}</span>
+                                {% else %}
+                                    <a class="page-numbers" href="?page={{ num }}">{{ num }}</a>
+                                {% endif %}
+                            {% endfor %}
 
+                            {% if photo.has_next %}
+                            <a class="next page-numbers" href="?page={{ photo.next_page_number }}">Next »</a>
+                            {% endif %}
+                            {% comment %} <span class="page-numbers current">1</span>
+                            <a class="page-numbers" href="#">2</a>
+                            <a class="next page-numbers" href="#">Next »</a> {% endcomment %}
+                        </nav>
+                        <br/>
 
-
+                    </div>     
+                </main>   
+            </div>       
+        </div>           
+    </div>
+</div>
 
 {% endblock content %}
 <!-- .container -->
-<footer id="colophon" class="site-footer">
+<footer id="colophon" class="site-footer" style="margin-top:6rem;">
 	<div class="container">
 		<div class="site-info">
 			<h1 style="font-family: 'Herr Von Muellerhoff';color: #ccc;font-weight:300;text-align: center;margin-bottom:0;margin-top:0;line-height:1.4;font-size: 46px;">
@@ -78,11 +112,13 @@
 	{% comment %} <a href="#top" class="smoothup" title="Back to top"><span class="genericon genericon-collapse"></span></a> {% endcomment %}
 </div>
 
-</body>
+
     <script src='{% static "js/jquery.js" %}'></script>
     <script src='{% static "js/plugins.js" %}'></script>
     <script src='{% static "js/scripts.js" %}'></script>
     <script src='{% static  "js/masonry.pkgd.min.js" %}'></script>
+    {% comment %} bootstrap {% endcomment %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js" integrity="sha384-k6d4wzSIapyDyv1kpU366/PK5hCdSbCRGRCMv+eplOQJWyd1fbcAu9OCUj5zNLiq" crossorigin="anonymous"></script>
 
-  <body>    
+</body> 
  </html>
