--- a/app/templates/blog_detailed.html
+++ b/app/templates/blog_detailed.html
@@ -18,10 +18,13 @@
 					</div>
 				</nav>  {% endcomment %}
 				<!-- .navigation -->
-
-				<div class="nav-next">
-					<a href="{% url "blog" %}" rel="next">←<span class="meta-nav">All Blogs </span></a>
-					</div>	
+		{% comment %} <nav class="navigation post-navigation" role="navigation"> {% endcomment %}
+			<div class="nav-next">
+				<a href="{% url "blog" %}" rel="next">←<span class="meta-nav">All Blogs </span></a>
+			</div>
+			<div class="nav-previous">
+				<a href="#" rel="prev"> <span class="meta-nav"></span> Delete</a>
+		{% comment %} </nav>	 {% endcomment %}
 		
 		<div id="content" class="site-content">
 			<div id="primary" class="content-area column two-thirds single-portfolio">
