--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -48,6 +48,33 @@
 							
 						</div>
 						<!-- .grid -->
+
+						
+                        <nav class="pagination">
+                            {% comment %} <p>Has Previous: {{ photo.has_previous }}</p>
+                            <p>Has Next: {{ photo.has_next }}</p>
+                            <p>Current Page: {{ photo.number }}</p>
+                            <p>Total Pages: {{ photo.paginator.num_pages }}</p> {% endcomment %}
+                            {% if photo.has_previous %}
+                            <a class="page-numbers" href="?page={{ photo.previous_page_number }}">« Previous</a>
+                            {% endif %}
+
+                            {% for num in photo.paginator.page_range %}
+                                {% if photo.number == num %}
+                                    <span class="page-numbers current">{{ num }}</span>
+                                {% else %}
+                                    <a class="page-numbers" href="?page={{ num }}">{{ num }}</a>
+                                {% endif %}
+                            {% endfor %}
+
+                            {% if photo.has_next %}
+                            <a class="next page-numbers" href="?page={{ photo.next_page_number }}">Next »</a>
+                            {% endif %}
+                            {% comment %} <span class="page-numbers current">1</span>
+                            <a class="page-numbers" href="#">2</a>
+                            <a class="next page-numbers" href="#">Next »</a> {% endcomment %}
+                        </nav>
+                        <br/>
 {% comment %} 						
 						<nav class="pagination">
 						<span class="page-numbers current">1</span>
