done with the delete.html and delete.views as well as the urls, done with context_processor

--- a/app/templates/blog_detailed.html
+++ b/app/templates/blog_detailed.html
@@ -23,7 +23,7 @@
 				<a href="{% url "blog" %}" rel="next">←<span class="meta-nav">All Blogs </span></a>
 			</div>
 			<div class="nav-previous">
-				<a href="#" rel="prev"> <span class="meta-nav"></span> Delete</a>
+				<a href="{% url 'delete' 'blog' blog.id %}" rel="prev"> <span class="meta-nav"></span> Delete</a>
 		{% comment %} </nav>	 {% endcomment %}
 		
 		<div id="content" class="site-content">
