--- a/app/templates/photo_detailed.html
+++ b/app/templates/photo_detailed.html
@@ -9,7 +9,9 @@
 		<div id="content" class="site-content">
 			<div id="primary" class="content-area column two-thirds single-portfolio">
 				<main id="main" class="site-main">
-				
+					<div class="nav-next" style="margin: 2px; padding : 3px;">
+						<a href="{% url 'delete' 'photo' photo.id %}" rel="next" ><span class="meta-nav">Delete </span></a>
+					</div>
 					<article class="portfolio hentry">
 						<header class="entry-header">
 							<div class="entry-thumbnail">
