--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -20,7 +20,7 @@
 											<img src="{{ photos.image.url }}" class="attachment-post-thumbnail size-post-thumbnail wp-post-image" alt="pic"/>
 										</a>
 									</div>
-									<h2 class="entry-title">
+									<h2 class="entry-title" style="margin-top: 6px; ">
 										<a href="{% url 'photo_detail' photos.id %}">{{ photos.title }}</a>
 									</h2>
 
