--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -76,13 +76,13 @@
 							</ul>
 
 								<!-- Show "Show All" or "Show Latest" button -->
-							<div class="mt-3">
+							{% comment %} <div class="mt-3">
 									{% if show_all %}
 										<a href="{% url 'blog' %}" class="btn btn-primary" style = "color:white; background-color:black;">Show Latest</a>
 									{% else %}
 										<a href="{% url 'blog' %}?show_all=true" class="btn btn-primary" style = "color:white; background-color:grey;">Show All</a>
 									{% endif %}
-							</div>
+							</div> {% endcomment %}
 														{% comment %} <ul>
 					           {% for blog in  blogs%}
 								<li>
@@ -96,24 +96,49 @@
 						
                         <nav class="pagination">
 
-							{% if blog.has_previous %}
-							   <a  class = "page-numbers" href="?blog_page={{blogs.previous_page_nuumber}}">« Previous</a>
+							{% if blogs.has_previous %}
+							   <a  class = "page-numbers" href="?blog_page={{blogs.previous_page_number}}">« Previous</a>
 							{% endif %}
 
 							{% for num in blogs.paginator.page_range %}
 								{% if blogs.number == num %}
 										<span class="page-numbers current">{{ num }}</span>
 								{% else %}
-										<a class="page-numbers" href="?page={{ num }}{% if show_all %}&show_all=true{% endif %}">{{ num }}</a>
+										<a class="page-numbers" href="?page={{ num }}>{{ num }}</a>
 								{% endif %}
 							{% endfor %}
 
 							{% if blogs.has_next %}
-								<a class="next page-numbers" href="?page={{ blogs.next_page_number }}{% if show_all %}&show_all=true{% endif %}">Next »</a>
-							{% endif %}
+                               <a class="next page-numbers" href="?page={{ blogs.next_page_number }}">Next »</a>
+                              {% endif %}
 						</nav>
 						
-					
+					  {% comment %} <!-- Show All Button --> {% endcomment %}
+				<div class="mt-3">
+					{% if show_all %}
+						<a href="{% url 'blog' %}" class="btn btn-primary">Show Latest</a>
+					{% else %}
+						<a href="{% url 'blog' %}?show_all=true" class="btn btn-primary">Show All</a>
+					{% endif %}
+				</div>
+						
+						<aside id="categories-2" class="widget widget_categories">
+							<h4 class="widget-title">Categories</h4>
+							<ul>
+								{% for cat in category %}
+									<li><a href="#">{{ cat.month }} - {{ cat.venue }}</a></li>
+								{% endfor %}
+							</ul>
+						</aside>
+						
+						<aside id="archives-2" class="widget widget_archive">
+							<h4 class="widget-title">Archives</h4>
+							<ul>
+								<li><a href="#">January 2023</a></li>
+								<li><a href="#">February 2023</a></li>
+								<li><a href="#">March 2023</a></li>
+							</ul>
+						</aside>
 					
 						
 					</div>
