--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -15,7 +15,7 @@
 						<div class="grid bloggrid">
 						
 						{% for blog in blogs %}
-							<article>
+							<article style="margin-bottom: 20px;" class="post-{{ blog.id }} post type-post status-publish format-standard has-post-thumbnail hentry category-uncategorized tag-uncategorized">
 								<header class="entry-header">
 									<h1 class="entry-title">
 										<a href="{% url 'blog_detail' blog.slug %}">{{ blog.title }}</a>
@@ -63,85 +63,52 @@
 							</p>
 						</div>
 						</aside>
-						
+
+						<!-- Blog List -->
 						<aside id="recent-posts-2" class="widget widget_recent_entries">
 							{% comment %} <h4 class="widget-title">Recent Posts</h4> {% endcomment %}
-							<h1 class=" widget-title my-4">Recent Posts</h1>
+
+							<h1 class=" my-4">Blog Titles</h1>
 							<ul>
-									{% for blog in blogs %}
-										<li>
-											<a href="{% url 'blog_detail' blog.slug %}">{{ blog.title }}</a>
-										</li>
-									{% endfor %}
+								{% for blog in blog_titles %}
+									<li>
+										<a href="{% url 'blog_detail' blog.slug %}">{{ blog.title }}</a>
+									</li>
+								{% endfor %}
 							</ul>
 
-								<!-- Show "Show All" or "Show Latest" button -->
-							{% comment %} <div class="mt-3">
-									{% if show_all %}
-										<a href="{% url 'blog' %}" class="btn btn-primary" style = "color:white; background-color:black;">Show Latest</a>
-									{% else %}
-										<a href="{% url 'blog' %}?show_all=true" class="btn btn-primary" style = "color:white; background-color:grey;">Show All</a>
-									{% endif %}
-							</div> {% endcomment %}
-														{% comment %} <ul>
-					           {% for blog in  blogs%}
-								<li>
-								  <a href="{% url "blog_detail"  blog.slug%}">{{blog.title}}</a>
-								</li>
-								{% endfor %}
-								
-							</ul> {% endcomment %}
+															<!-- Show All Button for Blog Titles -->
+							<div class="mt-3">
+								{% if not show_all_titles %}
+									<a href="?show_all_titles=true" class="btn btn-primary" style=" color:white;background-color:grey;">Show All</a>
+								{% else %}
+									<a href="{% url 'blog' %}" class="btn btn-primary" style="color:white; background-color:black;" >Show Latest</a>
+								{% endif %}
+							</div>
+							
 						</aside>
 						
 						
-                        <nav class="pagination">
-
+											<!-- Pagination Controls -->
+						<nav class="pagination">
 							{% if blogs.has_previous %}
-							   <a  class = "page-numbers" href="?blog_page={{blogs.previous_page_number}}">« Previous</a>
+								<a class="page-numbers" href="?page={{ blogs.previous_page_number }}" style="color:white; background-color:black;"    > « Previous</a>
 							{% endif %}
 
 							{% for num in blogs.paginator.page_range %}
 								{% if blogs.number == num %}
-										<span class="page-numbers current">{{ num }}</span>
+									<span class="page-numbers current">{{ num }}</span>
 								{% else %}
-										<a class="page-numbers" href="?page={{ num }}>{{ num }}</a>
+									<a class="page-numbers" href="?page={{ num }}">{{ num }}</a>
 								{% endif %}
 							{% endfor %}
 
 							{% if blogs.has_next %}
-                               <a class="next page-numbers" href="?page={{ blogs.next_page_number }}">Next »</a>
-                              {% endif %}
+								<a class="next page-numbers" href="?page={{ blogs.next_page_number }}">Next »</a>
+							{% endif %}
 						</nav>
-						
-					  {% comment %} <!-- Show All Button --> {% endcomment %}
-				<div class="mt-3">
-					{% if show_all %}
-						<a href="{% url 'blog' %}" class="btn btn-primary">Show Latest</a>
-					{% else %}
-						<a href="{% url 'blog' %}?show_all=true" class="btn btn-primary">Show All</a>
-					{% endif %}
-				</div>
-						
-						<aside id="categories-2" class="widget widget_categories">
-							<h4 class="widget-title">Categories</h4>
-							<ul>
-								{% for cat in category %}
-									<li><a href="#">{{ cat.month }} - {{ cat.venue }}</a></li>
-								{% endfor %}
-							</ul>
-						</aside>
-						
-						<aside id="archives-2" class="widget widget_archive">
-							<h4 class="widget-title">Archives</h4>
-							<ul>
-								<li><a href="#">January 2023</a></li>
-								<li><a href="#">February 2023</a></li>
-								<li><a href="#">March 2023</a></li>
-							</ul>
-						</aside>
-					
-						
-					</div>
+									
+				    </div>
 					<!-- .widget-area -->
 				</div>
 				<!-- #secondary -->
