added the back button in blog detailed and photo detailed

--- a/app/templates/blog_detailed.html
+++ b/app/templates/blog_detailed.html
@@ -16,6 +16,8 @@
 					
 						<!-- Update Button -->
 						<a href="{% url 'update' 'blog' blog.id %}" class="btn btn-primary" style="color: white;">Update</a>
+						<!-- Back Button -->
+						<a href="{% url 'blog' %}" class="btn btn-primary" style="color: white;background-color:orange;">Back</a>
 					</div>
 					<article class="portfolio hentry">
 						<header class="entry-header">
