--- a/app/templates/photo_detailed.html
+++ b/app/templates/photo_detailed.html
@@ -18,6 +18,8 @@
 					
 						<!-- Update Button -->
 						<a href="{% url 'update' 'photo' photo.id %}" class="btn btn-primary" style="color: white;">Update</a>
+						<!-- Back Button -->
+						<a href="{% url 'home'  %}" class="btn btn-primary" style="color: white;background-color:orange;">Back</a>
 					</div>
 					<article class="portfolio hentry">
 						<header class="entry-header">
